fix: layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 main{
     background-color: black;
     padding: 50px;
-    height: 100vh;
+    
 }
 
 .btn{
@@ -23,7 +23,7 @@ main{
 
 }
 
-.cont_grid, .container_box{
+.cont_grid{
     width: 600px;
     height: 600px;
     margin: 0 auto;
@@ -32,10 +32,12 @@ main{
     justify-content: center;
     align-items: center;
     
+    
 }
 
 .bord{
     border: 3px solid white;
+    color: white;
 }
 
 .none{
